--- a/capstone/stuff/templates/output.html
+++ b/capstone/stuff/templates/output.html
@@ -66,7 +66,7 @@ document.getElementById("stopButton").addEventListener("click", function() {
 });
 </script>
 <img src="http://18.222.229.45:80/video_feed" width="848" height="480" />
-
+<p> </p>
 <button id="startButton2">Start</button>
 <p id="responseMessage3"></p> <!-- To display any response -->
 
@@ -74,29 +74,26 @@ document.getElementById("stopButton").addEventListener("click", function() {
 <p id="responseMessage4"></p> <!-- To display any response -->
 <script>
 
-document.getElementById("startButton").addEventListener("click", function() {
-    fetch('/stuff/start-button/', {  // URL of the Django view
+document.getElementById("startButton2").addEventListener("click", function() {
+    fetch('/stuff/start-video-button/', {  // URL of the Django view
         method: 'GET',
     })
     .then(response => response.json()) // Expect JSON response
     .then(data => {
-        document.getElementById("responseMessage").innerText = data.message; // Show response
-
-        // Start reloading the image every 3 seconds
-        fetchNewImage(); // Call once immediately
-        reloadInterval = setInterval(fetchNewImage, 3000);
+        document.getElementById("responseMessage3").innerText = data.message; // Show response
     })
     .catch(error => console.error('Error:', error));
 });
 document.getElementById("stopButton2").addEventListener("click", function() {
-    fetch('/stuff/stop-button/', {  // URL of the Django view
+    fetch('/stuff/stop-video-button/', {  // URL of the Django view
         method: 'GET',
     })
     .then(response => response.json()) // Expect JSON response
     .then(data => {
-        document.getElementById("responseMessage2").innerText = data.message; // Show response
+        document.getElementById("responseMessage4").innerText = data.message; // Show response
     })
     .catch(error => console.error('Error:', error));
 });
+</script>
 </body>
 </html>
