--- a/capstone/stuff/templates/video_stuff.html
+++ b/capstone/stuff/templates/video_stuff.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Video</h1>
-<img src="http://3.145.119.119:80/video_feed" width="848" height="480" />
+<img src="http://3.145.119.119:80/video_feed" width="100%" height="auto" />
 <p> </p>
 <button id="startButton2">Start</button>
 <p id="responseMessage3"></p> <!-- To display any response -->
