--- a/capstone/stuff/templates/output.html
+++ b/capstone/stuff/templates/output.html
@@ -112,7 +112,7 @@
     <!-- Video -->
     <div class="block">
       <div class="section-title">Video</div>
-      <img src="{% url 'proxy_video_feed' %}" width="100%" />
+      <img src="https://3.145.119.119:443/video_feed" width="100%" height="auto" />
       <div class="controls">
           <div style="margin-bottom: 10px;">
             <button id="startButton2">Start</button>
